[package]
name = "cln-lightning-liquidity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
cln-plugin = "0.1.7"
cln-rpc = "0.1.7"
hex = "0.4.3"
log = "0.4.20"
rand = "0.8.5"
serde = {version= "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
tokio = {version="1.36.0", features = ["macros", "rt-multi-thread", "time"]}
